--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "build": "tsc && vite build"
   },
   "dependencies": {
-    "vue-demi": "latest",
-    "mobx": "^6.3.2"
+    "mobx": "^6.3.2",
+    "@vueuse/core": "^5.3.0",
+    "vue-demi": "latest"
   },
   "peerDependencies": {
     "@vue/composition-api": "^1.0.0-beta.1",
-    "vue": "^2.6.14 || >=3.0.0-rc.0",
-    "mobx": "^6.3.2"
+    "mobx": "^6.3.2",
+    "vue": "^2.6.14 || >=3.0.0-rc.0"
   },
   "peerDependenciesMeta": {
     "@vue/composition-api": {
@@ -29,11 +30,13 @@
     }
   },
   "devDependencies": {
+    "@types/node": "^16.4.10",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
     "vite-plugin-dts": "latest",
-    "vue": "^3.0.0",
-    "@types/node": "^16.4.10"
+    "vue": "^3.0.0"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
