--- a/package.json
+++ b/package.json
@@ -21,13 +21,7 @@
     "vue-demi": "latest"
   },
   "peerDependencies": {
-    "@vue/composition-api": "^1.0.0-beta.1",
-    "vue": "^2.6.14 || >=3.0.0-rc.0"
-  },
-  "peerDependenciesMeta": {
-    "@vue/composition-api": {
-      "optional": true
-    }
+    "vue": ">=3.0.0-rc.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
