fix: fix missing module for nuxt3

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
       "import": "./dist/mobx-vue-lite.es.js",
       "require": "./dist/mobx-vue-lite.umd.js"
     },
-    "./module": "./module.mjs"
+    "./module": "./nuxt/module.mjs"
   },
   "scripts": {
     "build": "tsc && vite build",
