--- a/package.json
+++ b/package.json
@@ -2,41 +2,52 @@
   "name": "mobx-vue-lite",
   "version": "0.2.7",
   "license": "MIT",
-  "main": "./dist/mobx-vue-lite.umd.js",
-  "module": "./dist/mobx-vue-lite.es.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "exports": {
     ".": {
-      "import": "./dist/mobx-vue-lite.es.js",
-      "require": "./dist/mobx-vue-lite.umd.js"
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs"
     },
     "./module": "./nuxt/module.mjs"
   },
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc && vite build",
-    "test": "jest"
+    "build-fast": "tsup src/index.ts --format esm,cjs",
+    "build": "pnpm run build-fast -- --dts-resolve",
+    "test": "vitest run",
+    "release": "bumpp --commit --push --tag && pnpm publish",
+    "prepublishOnly": "pnpm run build",
+    "lint": "eslint \"**/*.{ts,js}\""
   },
   "dependencies": {
-    "@vueuse/core": "^6.5.3",
-    "mobx": "^6.3.2"
+    "@vueuse/core": "^7.7.0",
+    "mobx": "^6.4.2",
+    "vue": "^3.2.31"
   },
   "peerDependencies": {
     "vue": ">=3.2.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.4.10",
-    "@vue/test-utils": "^2.0.0-rc.15",
-    "jest": "^27.0.6",
-    "ts-jest": "^27.0.4",
+    "@antfu/eslint-config": "^0.16.1",
+    "@types/node": "^17.0.21",
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "bumpp": "^7.1.1",
+    "eslint": "^8.10.0",
+    "happy-dom": "^2.45.0",
+    "tsup": "^5.11.13",
     "typescript": "^4.3.2",
-    "vite": "^2.4.4",
-    "vite-plugin-dts": "latest",
-    "vue": "^3.2.0"
+    "vitest": "^0.5.9"
   },
   "files": [
     "dist",
     "nuxt"
+  ],
+  "eslintConfig": {
+    "extends": "@antfu"
+  },
+  "eslintIgnore": [
+    "dist"
   ],
   "sideEffects": true
 }
