--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "vue": "^3.2.31"
   },
   "peerDependencies": {
-    "vue": ">=3.2.0"
+    "mobx": "^6.1.0",
+    "vue": "^3.2.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "0.18.3",
