--- a/package.json
+++ b/package.json
@@ -2,21 +2,22 @@
   "name": "mobx-vue-lite",
   "version": "0.3.1",
   "license": "MIT",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "sideEffects": true,
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "require": "./dist/index.js",
       "import": "./dist/index.mjs"
     },
     "./nuxt": "./nuxt/module.mjs"
   },
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "files": [
     "dist",
     "nuxt"
   ],
-  "sideEffects": true,
   "scripts": {
     "build-fast": "tsup src/index.ts --format esm,cjs",
     "build": "pnpm run build-fast -- --dts-resolve",
@@ -30,21 +31,19 @@
     "mobx": "^6.1.0",
     "vue": "^3.2.0"
   },
-  "dependencies": {
-    "mobx": "^6.4.2",
-    "vue": "^3.2.31"
-  },
   "devDependencies": {
-    "@antfu/eslint-config": "0.25.1",
-    "@types/node": "17.0.21",
-    "@vue/test-utils": "2.0.1",
-    "@vueuse/core": "8.7.4",
-    "bumpp": "8.2.1",
-    "eslint": "8.18.0",
-    "happy-dom": "5.3.1",
-    "tsup": "6.1.2",
-    "typescript": "4.7.4",
-    "vitest": "0.15.2"
+    "@antfu/eslint-config": "0.39.5",
+    "@types/node": "18.16.18",
+    "@vue/test-utils": "2.3.2",
+    "@vueuse/core": "10.2.0",
+    "bumpp": "9.1.1",
+    "eslint": "8.42.0",
+    "happy-dom": "9.20.3",
+    "mobx": "^6.9.0",
+    "tsup": "7.0.0",
+    "typescript": "5.1.3",
+    "vitest": "0.32.1",
+    "vue": "^3.3.4"
   },
   "eslintConfig": {
     "extends": "@antfu"
