--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "mobx": "^6.1.0",
     "vue": "^3.2.0"
   },
+  "dependencies": {
+    "@vueuse/core": "10.2.0"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "0.39.5",
     "@types/node": "18.16.18",
     "@vue/test-utils": "2.3.2",
-    "@vueuse/core": "10.2.0",
     "bumpp": "9.1.1",
     "eslint": "8.42.0",
     "happy-dom": "9.20.3",
